# Django-DRF-Boilerplate

./: README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml
config/: .env.example  gunicorn.conf.py
src/main/django/: base.py  development.py
src/main/settings/: logging.py
