[project]
name = "django-drf-boilerplate"
version = "0.4.0"
requires-python = ">=3.12.0"
dependencies = [
    "django-environ>=0.12.0",
    "django-redis>=6.0.0",
    "django-unfold>=0.79.0",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.29.0",
    "gevent>=25.9.1",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.3",
    "python-json-logger>=4.0.0",
    "redis[hiredis]>=7.2.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "django-extensions>=4.1",
    "django-silk>=5.4.3",
]
test = [
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "faker>=38.2.0",
]

stubs = [
    "django-stubs[compatible-mypy]>=5.2.8",
    "djangorestframework-stubs[compatible-mypy]>=3.16.6",
]

[tool.ruff]
target-version = "py312"
exclude = [".venv"]
lint.extend-select = ["ALL"]
lint.ignore = [
  "ANN401",
  "COM812",
  "D100",
  "D104",
  "D106",
  "D204",
]

[tool.ruff.lint.per-file-ignores]
"src/manage.py" = ["ANN201", "EM101", "PLC0415", "TRY003"]
"src/*/migrations/*" = ["E501", "Q000", "RUF012", "I001", "D101"]
"src/*/tests/*" = ["D102", "S101"]
"src/main/django/*" = ["E402", "F403", "F405"] # allow wildcard imports
"src/main/settings/*" = ["E402", "F403", "F405"] # allow wildcard imports

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv"]
files = "src/"
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "main.django.test"
